Bug 446749: Don't disable alarms after command line action

Alarms were disabled if a KAlarm command line action (e.g. --list,
--edit, --triggerEvent) was executed while KAlarm was already running.

BUG: 446749